auto reload after rebuild application

--- a/app/views/Tangram.ejs
+++ b/app/views/Tangram.ejs
@@ -85,7 +85,7 @@
 		<p name="blurupdate" url="/T/update?Rid=8II9UQ5&Description=" contenteditable="true" orginal="Description8II9UQ5">跟踪照护系统的问题</p>
 		<p name="Description8II9UQ5" class="hide" >跟踪照护系统的问题</p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=8II9UQ5&format=json" title="Rebuild application[Issues] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=8II9UQ5&format=json" title="Rebuild application[Issues] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=8II9UQ5" title="View define detail of application[Issues]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=8II9UQ5" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=8II9UQ5&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -102,7 +102,7 @@
 		<p name="blurupdate" url="/T/update?Rid=24A6M35&Description=" contenteditable="true" orginal="Description24A6M35">用于定义系统内的用户角色已经相应的应用访问权限。</p>
 		<p name="Description24A6M35" class="hide" >用于定义系统内的用户角色已经相应的应用访问权限。</p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=24A6M35&format=json" title="Rebuild application[Roles] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=24A6M35&format=json" title="Rebuild application[Roles] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=24A6M35" title="View define detail of application[Roles]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=24A6M35" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=24A6M35&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -118,7 +118,7 @@
 		<p name="blurupdate" url="/T/update?Rid=25S65R7&Description=" contenteditable="true" orginal="Description25S65R7">系统内的用户登陆</p>
 		<p name="Description25S65R7" class="hide" >系统内的用户登陆</p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=25S65R7&format=json" title="Rebuild application[UserLogin] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=25S65R7&format=json" title="Rebuild application[UserLogin] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=25S65R7" title="View define detail of application[UserLogin]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=25S65R7" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=25S65R7&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -134,7 +134,7 @@
 		<p name="blurupdate" url="/T/update?Rid=25RFV24&Description=" contenteditable="true" orginal="Description25RFV24">Users in current system</p>
 		<p name="Description25RFV24" class="hide" >Users in current system</p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=25RFV24&format=json" title="Rebuild application[Users] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=25RFV24&format=json" title="Rebuild application[Users] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=25RFV24" title="View define detail of application[Users]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=25RFV24" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=25RFV24&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -150,7 +150,7 @@
 		<p name="blurupdate" url="/T/update?Rid=3WFWJJ9&Description=" contenteditable="true" orginal="Description3WFWJJ9">名词解释2</p>
 		<p name="Description3WFWJJ9" class="hide" >名词解释2</p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=3WFWJJ9&format=json" title="Rebuild application[Words] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=3WFWJJ9&format=json" title="Rebuild application[Words] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=3WFWJJ9" title="View define detail of application[Words]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=3WFWJJ9" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=3WFWJJ9&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -167,7 +167,7 @@
 		<p name="blurupdate" url="/T/update?Rid=1GIDHPMA&Description=" contenteditable="true" orginal="Description1GIDHPMA">用于管理项目的各种属于我的事项。 </p>
 		<p name="Description1GIDHPMA" class="hide" >用于管理项目的各种属于我的事项。 </p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=1GIDHPMA&format=json" title="Rebuild application[ZCar] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=1GIDHPMA&format=json" title="Rebuild application[ZCar] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=1GIDHPMA" title="View define detail of application[ZCar]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=1GIDHPMA" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=1GIDHPMA&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -184,7 +184,7 @@
 		<p name="blurupdate" url="/T/update?Rid=1GJIHC1B&Description=" contenteditable="true" orginal="Description1GJIHC1B">用于管理项目的各种属于我的事项。 </p>
 		<p name="Description1GJIHC1B" class="hide" >用于管理项目的各种属于我的事项。 </p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=1GJIHC1B&format=json" title="Rebuild application[ZCarRelease] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=1GJIHC1B&format=json" title="Rebuild application[ZCarRelease] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=1GJIHC1B" title="View define detail of application[ZCarRelease]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=1GJIHC1B" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=1GJIHC1B&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -201,7 +201,7 @@
 		<p name="blurupdate" url="/T/update?Rid=3W8AQQW&Description=" contenteditable="true" orginal="Description3W8AQQW">房贷</p>
 		<p name="Description3W8AQQW" class="hide" >房贷</p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=3W8AQQW&format=json" title="Rebuild application[lend] to active changes">Rebuild</a>
+			<a class="btn btn-xs" name="onereload" href="javascript:;" url="/T/create?Rid=3W8AQQW&format=json" title="Rebuild application[lend] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=3W8AQQW" title="View define detail of application[lend]"><img class="icon15" src="/img/detail.png"></a>
 			<a href="/T/update?Rid=3W8AQQW" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=3W8AQQW&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
@@ -211,7 +211,7 @@
 	</div>
 <% } %>
 	<div class="list-app">
-		<h3><small>Rebuild: </small><a name="onemsg" href="javascript:;" url="/T/create?format=json">All Applications</a></h3><br />
+		<h3><small>Rebuild: </small><a name="onereload" href="javascript:;" url="/T/create?format=json">All Applications</a></h3><br />
 		<p class="text-center"><a href="/T/new" class="btn btn-lg btn-default" title="Add New Application"><img src="/img/add.png"> Application</a></p>
 		<div class="text-right"><a href="https://github.com/ItMan70s/Tangrammy/">View TangramMy on GitHub</a></div>
 </div>
