--- a/app/service/admin/T_new.ejs
+++ b/app/service/admin/T_new.ejs
@@ -151,7 +151,7 @@
 			<div class='col-md-12 hide'><div><label>Keys</label><div class='controls'><input type='text' class='form-control' name='Keys' value='<%= data["Keys"] %>' placeholder='Key field names joined by ","'></div></div></div>
 			<div class="col-md-12"><div><label class="control-label title-label">Disable Actions</label><div class="controls">
 				<div class="form-control min-h34"><div class="min-h20">
-				<input type="checkbox" name="NoAction" value="" checked=true class="hidden" >
+				<label class="hidden"><input type="checkbox" name="NoAction" value="" checked=true ></label>
 				<% var val = data["NoAction"] || "";  val = "," + val.toString() + ",";%>
 				<label class="checkbox-inline col-md-auto "><input type="checkbox" name="NoAction" value="new" <%= (val.contains( "," + "new" + ",")) ? "checked=true" : "" %> >New</label>
 				<label class="checkbox-inline col-md-auto "><input type="checkbox" name="NoAction" value="copy" <%= (val.contains( "," + "copy" + ",")) ? "checked=true" : "" %> >Copy</label>
@@ -559,13 +559,24 @@
 			<input type="text" class="form-control" name="css" value=""></div></div></div>
 	</div><div>
 	
-		<div class="col-md-12 controls f-options"><label class="control-label title-label"> 
+		<div class="col-md-12 controls f-options"><label class="control-label title-label" style="padding-top: 8px;width: 100%"> 
 		
-		<select name='otype' class='input-sm col-md-auto' style="margin-top: 8px;">
-			<option value='diy'  <%= (data["otype"] != "applications" && data["otype"] != "users" ) ? "selected=true" : "" %>  >Options: User Define</option>
-			<option value='applications'  <%= (data["otype"] == "applications") ? "selected=true" : "" %>  >Options: Application List</option>
-			<option value='users'  <%= (data["otype"] == "users") ? "selected=true" : "" %>  >Options:  System Users List</option>
+		<select name='otype' class='input-sm col-md-auto'>
+			<option value='diy'>Options: User Define</option>
+			<option value='applications'>Options: Application List</option>
+			<option value='users'>Options:  System Users List</option>
+			<option value='reference'>Options:  Refere values in other application</option>
 		</select>
+		<span id="reference_zone">
+			<input type="text" class="input-sm form-control col-md-0" style="width: auto" name="ourl" placeholder="/todo/search?Fids=F1,F2,F5&size=100&F5=Do052" />
+			<input type="text" class="input-sm form-control col-md-0" style="width: 40px" name="olabel" placeholder="F5" title="field id to display in option" />
+			<input type="text" class="input-sm form-control col-md-0" style="width: 40px" name="otitle" placeholder="F2" title="field id to display in hint/title" />
+		</span>
+		<select name='ofixed' class='input-sm col-md-auto '>
+			<option value='1' title="Options won't change even if data in application changed" >Fixed</option>
+			<option value='-1' title="Options change if data in application changed" >Flex</option>
+		</select>
+		<a name='oreload' class="input-group-addon wid50 btn btn-success" href="javascript:reloadOptions();" title="reload data to reset current options" >Reload</a>
 		</label>
 		<div class='col-md-12 tab-content'>
 			<div class="switch-icon">
@@ -713,7 +724,8 @@ function showOptions(opts, form, cols, type) {
 			(opts[i]["css"] ? "<span class='" + opts[i]["css"] + "'>" : "") + (opts[i]["caption"] || "") + (opts[i]["css"] ? "</span>" : "")  + '"},\n';
 	}
 	$('[name="options"]').val("[" + htm + "]");
-	$('[name="otype"]').val(type || "diy");
+	$('[name="otype"]').val(type || "diy").change();
+	
 	htm = "";
 	
 	var vals = ",";
@@ -724,6 +736,7 @@ function showOptions(opts, form, cols, type) {
 		}
 		var count = vals.split(",").length - 2;
 		htm += "<div class='col-md-12 min-h34'> </div>";
+		htm += "<div class='col-md-12' style='padding-top:10px;'><label>To add new options, edit following input text:</label></div>";
 		for (var i = 0; i < 3; i++) {
 			while (vals.indexOf("," + count + ",") > -1) {
 				count++;
@@ -792,17 +805,60 @@ function showOptions(opts, form, cols, type) {
 		if (!json["options"]) {
 			error("Failed to parse options into JSON! <br />Close current page to drop changes then try to make change in view mode.<br />or Find out what's wrong at <a target='_blank' href='http://jsonlint.com/' >JsonLint</a>.");
 		} else {
-			showOptions(json["options"], form, cols);
+			showOptions(json["options"], form, cols, type);
 		}
 	});
-	$(document).on("change", '[name="otype"]', function() {
-		if ($(this).val() == "applications" || $(this).val() == "users") {
-			$(".f-options > .tab-content").hide();
+	$(document).on("click", '[name="oreload"]', function() {
+		var val = $('[name="otype"]').val();
+		var url = "";
+		switch(val) {
+		case "applications":
+			url = "/T/V1/search?format=json";
+			break;
+		case "users":
+			url = "/users/search?format=json";
+			break;
+		case "reference":
+			url = $('[name="ourl"]').val();
+			if (url.indexOf("?") > 0) {
+				url = url.replace("?", "?format=json&");
+			} else {
+				url += "?format=json";
+			}
+			break;
+		default:
+		}
+		alert(url);
+	});
+	$(document).on("change", '[name="ofixed"]', autoShowReloadBtn);
+	$(document).on("change", '[name="otype"]', autoShowReloadBtn);
+	function autoShowReloadBtn() {
+		if ($('[name="ofixed"]').val() == 1 && $('[name="otype"]').val() != "diy") {
+			$('[name="oreload"]').show();
 		} else {
+			$('[name="oreload"]').hide();
+		}
+	}
+	$(document).on("change", '[name="otype"]', function() {
+		var val = $(this).val();
+		switch(val) {
+		case "applications":
+		case "users":
+			$(".f-options > .tab-content").hide();
+			$('[name="ofixed"]').show();
+			$('#reference_zone').hide();
+			break;
+		case "reference":
 			$(".f-options > .tab-content").show();
+			$('[name="ofixed"]').show();
+			$('#reference_zone').show();
+			break;
+		default:
+			$(".f-options > .tab-content").show();
+			$('[name="ofixed"]').hide();
+			$('#reference_zone').hide();
 		}
 	});
-	$('[name="otype"]').change();
 	//bindRichText();
 }
 
@@ -856,8 +912,13 @@ function onCreate() {
 			continue;
 		}
 		if (key == "options") {
+			json += '"ourl": "' + $("[name='ourl']").val() + '", ';
+			json += '"olabel": "' + $("[name='olabel']").val() + '", ';
+			json += '"otitle": "' + $("[name='otitle']").val() + '", ';
+			json += '"ofixed": "' + $("[name='ofixed']").val() + '", ';
 			json += '"otype": "' + $("[name='otype']").val() + '", ';
 			if ($("[name=otype]").val() == "diy") {
+				// TODO check why? shouldn't run due to condition "[name=otype]" 
 				val = (val)? val.replace(/[\r\n]/g, ""): "[]";
 			} else {
 				continue;
