application as options

--- a/app/service/admin/T_new.ejs
+++ b/app/service/admin/T_new.ejs
@@ -861,10 +861,10 @@ function reloadOptions() {
 	var fidValue = "";
 	switch(type) {
 	case "applications":
-		url = "/T/V1/search?";
-		fidLabel = "";
-		fidTitle = "";
-		fidValue = "";
+		url = "/T/search?";
+		fidLabel = "F0";
+		fidTitle = "F1";
+		fidValue = "F1";
 		break;
 	case "users":
 		url = "/users/search?";
